Added tasks for demos